[gd_scene load_steps=6 format=3 uid="uid://6mdjrm773v5g"]

[ext_resource type="Script" path="res://Main_menu/scripts/audio_manager.gd" id="1_dnwig"]
[ext_resource type="AudioStream" uid="uid://cc0uvp70ytyec" path="res://assets/audio_old/Plant-o-Mancer-perfect-loop.mp3" id="2_24lj8"]
[ext_resource type="AudioStream" uid="uid://cocew5bk8wgyr" path="res://assets/audio_old/Plant-o-mancer.mp3" id="2_fnqxn"]
[ext_resource type="AudioStream" uid="uid://det3nram1xs75" path="res://assets/audio_old/button.wav" id="3_8amcv"]
[ext_resource type="AudioStream" uid="uid://cdw8gux34in1p" path="res://DeathScreen/Death.wav" id="4_yc55r"]

[node name="AudioManager" type="Node"]
script = ExtResource("1_dnwig")

[node name="LauncherTheme" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_fnqxn")
bus = &"Music"

[node name="LoopTheme" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_24lj8")
bus = &"Music"

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_yc55r")
bus = &"Sound Effect"

[node name="SoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_8amcv")
bus = &"Sound Effect"

[connection signal="finished" from="LauncherTheme" to="." method="_on_music_player_finished"]
[connection signal="finished" from="DeathSound" to="." method="_on_death_sound_finished"]
[connection signal="finished" from="SoundPlayer" to="." method="_on_death_sound_finished"]
